<resources>
    <string name="app_name">RecetarioAMedida</string>
    <string name="referencias">Referencias de las recetas</string>
    <string name="welcome">Bienvenidos a Recetario a Medida!</string>
    <string name="explain">Acá podrás encontrar recetas y subir las tuyas propias</string>

    //NavigationView
    <string name="nombre">Recetas a tu medida</string>
    <string name="recetas">Recetas públicas</string>
    <string name="mis_recetas">Mis recetas</string>
    <string name="favoritos">Mis recetas favoritas</string>
    <string name="aboutUs">About Us</string>
    <string name="login_iniciar">Iniciar Sesión</string>
    <string name="login_salir">Salir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //CardView
    <string name="titulo">Titulo</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="procedimiento">Procedimiento</string>

    //Detalle
    <string name="tvUpload">Hacer receta pública</string>
    <string name="tvDownload">Dejar de publicar</string>

    //AgregarReceta
    <string name="titulo_fragment_agregar">Ingresar nueva Receta</string>
    <string name="hint_titulo">Nombre de la receta</string>
    <string name="hint_ingredientes">Ingredientes de la receta</string>
    <string name="hint_procedimiento">Procedimiento de la receta</string>
    <string name="agregar_imagen">Agregar imagen a la receta</string>
    <string name="es_vegan">Receta Vegana</string>
    <string name="es_vegetarian">Receta Vegetariana</string>
    <string name="contiene_tacc">No contiene TACC</string>
    <string name="contiene_mani">No contiene Maní</string>

    //LogIn
    <string name="continuar_sin_log">Continuar sin LogIn</string>

    //Facebook
    <string name="facebook_app_id">191749718425918</string>
    <string name="fb_login_protocol_scheme">fb191749718425918</string>

    //Storage
    <string name="ruta_imagenes">recetas</string>
    <string name="ruta_database">recetaList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
