<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/login"
        android:title="@string/login_iniciar"
        android:icon="@drawable/ic_person_black_24dp"/>

    <item android:id="@+id/recetas"
        android:title="@string/recetas"
        android:icon="@drawable/book_shelf"/>

    <item android:id="@+id/misRecetas"
        android:title="@string/mis_recetas"
        android:icon="@drawable/ic_local_florist_black_24dp"/>

    <item android:id="@+id/favoritos"
        android:title="@string/favoritos"
        android:icon="@drawable/ic_favorite_black_24dp"
        />

    <item
        android:id="@+id/aboutUs"
        android:title="@string/aboutUs"
        android:icon="@drawable/ic_fingerprint_black_24dp"
        />

</menu>