<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.NuevaRecetaActivity"
    android:background="@color/colorWhite"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_fragment_agregar"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />

            <ImageView
                android:id="@+id/imagenAgregada"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/recetas_logo"
                android:scaleType="centerCrop"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTituloTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <EditText
                    android:id="@+id/addTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_titulo"
                    android:inputType="textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/switchVegano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/es_vegan"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                />
            <Switch
                android:id="@+id/switchVegetarian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/es_vegetarian"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                />
            <Switch
                android:id="@+id/switchTacc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contiene_tacc"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                />
            <Switch
                android:id="@+id/switchMani"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contiene_mani"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_gravity="end"
                android:layout_marginBottom="25dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:orientation="vertical"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal"
                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/addIngredientesTextLayout"
                    android:layout_width="0dp"
                    android:layout_weight="98"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    >
                    <EditText
                        android:id="@+id/addIngredientes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_ingredientes"
                        android:inputType="textCapSentences"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/agregarIngrediente"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_add_black_24dp"
                    />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addProcedimientoTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <EditText
                    android:id="@+id/addProcedimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_procedimiento"
                    android:inputType="textCapSentences"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/agregarReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:fabSize="normal"
                android:src="@drawable/ic_check_black_24dp"
                />
        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/agregarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:fabSize="mini"
        app:layout_anchor="@id/imagenAgregada"
        app:layout_anchorGravity="right|bottom"
        android:src="@drawable/ic_add_a_photo_black_48dp"
        />

</android.support.design.widget.CoordinatorLayout>
